# 2025-05-05_jvmti-jvm_tool_interface

./: .gitignore  README.md  build.gradle  examples.sh  settings.gradle
1-npe/src/main/java/io/kay/: Helper.java  Main.java
1-simple/: build.gradle
2-npe/src/main/java/io/kay/: Main.java
2-simple-kotlin/: build.gradle
2-simple-kotlin/src/main/java/io/kay/: Main.kt
2-simple/src/main/java/io/kay/: Main.java
3-oom/: build.gradle
3-oom/src/main/java/io/kay/: ClassicOOM.java  Main.java  SlowOOM.java  ThreadOOM.java
3-stacktraces/src/main/java/io/kay/: OtherClass.java
5-track-objects/: build.gradle
6-bypass-security/: secret.txt
7-spring-app/: build.gradle
7-spring-app/src/main/resources/: application.properties  data.sql  schema.sql
8-quarkus-app/: build.gradle
agent/: .gitignore  CMakeLists.txt  README.md
agent/1-method-entry/: CMakeLists.txt  agent.c
agent/1-npe/: agent.c
agent/10-debugging/: CMakeLists.txt  agent.c
agent/11-jvmti-with-jni/: CMakeLists.txt  agent.c
agent/2-method-entry/: CMakeLists.txt  agent.c
agent/2-npe/: CMakeLists.txt  agent.c
agent/3-jvmquake/: CMakeLists.txt  agent.c
agent/3-stacktraces/: agent.c
agent/4-stacktraces/: CMakeLists.txt  agent.c
agent/5-track-objects/: CMakeLists.txt  agent.c
agent/6-bypass-security/: CMakeLists.txt
agent/6-track-threads/: CMakeLists.txt  agent.c
agent/7-bypass-security/: CMakeLists.txt  agent.c
agent/7-method-performance/: CMakeLists.txt
agent/8-debugging/: CMakeLists.txt  agent.c
agent/8-watch-field/: agent.c
agent/9-method-performance/: CMakeLists.txt  agent.c
agent/9-watch-field/: agent.c
gradle/wrapper/: gradle-wrapper.properties
slides/: TODO.md  index.html  package.json
(+12 files in other folders)
