cmake_minimum_required(VERSION 3.25)
project(agent C)
set(CMAKE_C_STANDARD 23)

add_subdirectory(1-npe)
add_subdirectory(2-method-entry)
add_subdirectory(3-jvmquake)
add_subdirectory(4-stacktraces)
add_subdirectory(5-track-objects)
add_subdirectory(6-bypass-security)
add_subdirectory(7-method-performance)
add_subdirectory(8-debugging)
add_subdirectory(9-watch-field)
add_subdirectory(10-track-threads)
